--- a/index.html
+++ b/index.html
@@ -2,34 +2,51 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Wycena usług chmurowych</title>
-  <!-- Bootstrap 5 CSS from CDN -->
-  <link
-    rel="stylesheet"
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CloudPoint - Kalkulator usług</title>
+  <!-- Bootstrap 5 CSS (CDN) -->
+  <link 
+    rel="stylesheet" 
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
   />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container my-4">
-    <h1 class="mb-4 text-center">Kalkulator usług chmurowych</h1>
+  <!-- HEADER: wzorowany na cloudpoint.enteo.pl -->
+  <header class="cp-header">
+    <nav class="navbar navbar-expand-lg navbar-dark cp-header-bg">
+      <div class="container-fluid">
+        <!-- LOGO -->
+        <a class="navbar-brand d-flex align-items-center" href="https://cloudpoint.enteo.pl" target="_blank">
+          <!-- Możesz wstawić tu obrazek, np.: 
+          <img src="logo.png" alt="CloudPoint" height="40" class="me-2" /> 
+          -->
+          <span>CloudPoint</span>
+        </a>
 
-    <!-- Akordeon dla kategorii -->
-    <div class="accordion" id="categoriesAccordion">
-      <!-- Tutaj dynamicznie wstawiamy kategorie z pliku data.json -->
-    </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#cpNavbar" aria-controls="cpNavbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <div class="collapse navbar-collapse" id="cpNavbar">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <!-- Przykładowe linki w menu -->
+            <li class="nav-item">
+              <a class="nav-link" href="https://cloudpoint.enteo.pl/#offer" target="_blank">Oferta</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://cloudpoint.enteo.pl/#contact" target="_blank">Kontakt</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
-    <!-- Sekcja podsumowania -->
-    <div class="my-4 p-4 bg-light rounded text-center">
-      <h4>Całkowita cena miesięczna:</h4>
-      <h2><span id="totalPrice">0</span> PLN</h2>
-    </div>
-  </div>
-
-  <!-- Bootstrap JS (do animacji akordeonu) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Nasz skrypt -->
-  <script src="script.js"></script>
-</body>
-</html>
+  <!-- GŁÓWNA ZAWARTOŚĆ STRONY -->
+  <main class="container-fluid my-4">
+    <h1 class="text-center mb-4">Kalkulator usług chmurowych</h1>
+    <div class="row">
+      <!-- LEWA KOLUMNA: Menu kategorii -->
+      <div class="col-12 col-md-3 mb-3">
+        <div id="
