--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CloudPoint - Pakiety IaaS (w stylu DigitalOcean)</title>
+  <title>CloudPoint - Kalkulator (styl DO)</title>
   <!-- Bootstrap 5 CSS (CDN) -->
   <link
     rel="stylesheet"
@@ -12,18 +12,17 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Górny pasek (nawiązanie do stylu DO) -->
+  <!-- Górny pasek a'la DigitalOcean -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
     <div class="container-fluid">
       <!-- Logo po lewej -->
       <a class="navbar-brand d-flex align-items-center" href="#">
-        <!-- Tu można wstawić obrazek np. <img src="..." alt="Logo" style="height:30px;" class="me-2" /> -->
         <span class="fw-bold text-primary">CloudPoint</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topNavbar" aria-controls="topNavbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <!-- Menu prawe -->
+      <!-- Prawa część navbara -->
       <div class="collapse navbar-collapse" id="topNavbar">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item me-3">
@@ -46,108 +45,76 @@
     </div>
   </nav>
 
-  <!-- Kontent główny -->
+  <!-- Główna zawartość (2 kolumny) -->
   <div class="container-fluid mt-4">
     <div class="row">
-      <!-- LEWE MENU (boczne) -->
+      
+      <!-- LEWA KOLUMNA: Menu kategorii -->
       <div class="col-12 col-md-3 col-lg-2 px-4" id="leftMenu">
-        <h6 class="text-uppercase text-muted">Kategoria</h6>
-        <ul class="list-unstyled">
-          <li><a href="#" class="menu-link active">Basic</a></li>
-          <li><a href="#" class="menu-link">CPU-Optimized</a></li>
-          <li><a href="#" class="menu-link">General Purpose</a></li>
-          <li><a href="#" class="menu-link">Memory-Optimized</a></li>
-          <li><a href="#" class="menu-link">Storage-Optimized</a></li>
-          <li><a href="#" class="menu-link">Additional pricing</a></li>
-          <li><a href="#" class="menu-link">FAQ</a></li>
+        <h6 class="text-uppercase text-muted">Kategorie</h6>
+        <!-- Tu dynamicznie wstawimy listę kategorii (IaaS, PaaS, itd.) -->
+        <ul class="list-unstyled" id="categoriesMenu">
+          <!-- generowane w script.js -->
         </ul>
       </div>
 
-      <!-- PRAWA SEKCJA - Wybór planów -->
+      <!-- PRAWA KOLUMNA: Tabela planów + koszyk -->
       <div class="col-12 col-md-9 col-lg-10 px-4" id="rightContent">
-        <h2 class="mt-3">Basic Droplets</h2>
-        <p class="text-muted">
-          Basic Droplets have the most efficient CPU usage at a lower cost for workloads that undersuse dedicated threads...
+        <!-- Nagłówek kategorii -->
+        <h2 class="mt-3" id="categoryTitle">Wybierz kategorię...</h2>
+        <p class="text-muted" id="categoryDesc">
+          Proszę wybrać jedną z kategorii po lewej, aby zobaczyć dostępne plany/usługi.
         </p>
-        
-        <!-- Przełączniki CPU Options (Regular, Premium Intel, Premium AMD) -->
-        <div class="btn-group mb-4" role="group" aria-label="CPU Options">
-          <input type="radio" class="btn-check" name="cpuOption" id="cpuRegular" checked>
-          <label class="btn btn-outline-secondary" for="cpuRegular">Regular</label>
 
-          <input type="radio" class="btn-check" name="cpuOption" id="cpuPremiumIntel">
-          <label class="btn btn-outline-secondary" for="cpuPremiumIntel">Premium Intel</label>
-
-          <input type="radio" class="btn-check" name="cpuOption" id="cpuPremiumAMD">
-          <label class="btn btn-outline-secondary" for="cpuPremiumAMD">Premium AMD</label>
-        </div>
-
-        <!-- TABELA PAKIETÓW (inspirowana stylem DO) -->
-        <div class="table-responsive">
+        <!-- Tabela planów (a'la DO) -->
+        <div class="table-responsive mb-4" id="plansTableWrapper" style="display: none;">
           <table class="table align-middle table-hover packages-table">
             <thead>
               <tr class="text-muted">
-                <th>Memory</th>
-                <th>vCPU</th>
-                <th>Transfer</th>
-                <th>SSD</th>
-                <th>$/hr</th>
-                <th>$/mo</th>
+                <th>Parametry</th>
+                <th>Cena (miesięcznie)</th>
                 <th></th>
               </tr>
             </thead>
-            <tbody>
-              <!-- Przykładowe wiersze -->
-              <tr>
-                <td>512 MiB</td>
-                <td>1 vCPU</td>
-                <td>500 GiB</td>
-                <td>10 GiB</td>
-                <td>$0.00595</td>
-                <td>$4.00</td>
-                <td><button class="btn btn-outline-primary">→</button></td>
-              </tr>
-              <tr>
-                <td>1 GiB</td>
-                <td>1 vCPU</td>
-                <td>1000 GiB</td>
-                <td>25 GiB</td>
-                <td>$0.00893</td>
-                <td>$6.00</td>
-                <td><button class="btn btn-outline-primary">→</button></td>
-              </tr>
-              <tr>
-                <td>2 GiB</td>
-                <td>1 vCPU</td>
-                <td>2000 GiB</td>
-                <td>50 GiB</td>
-                <td>$0.01786</td>
-                <td>$12.00</td>
-                <td><button class="btn btn-outline-primary">→</button></td>
-              </tr>
-              <tr>
-                <td>2 GiB</td>
-                <td>2 vCPUs</td>
-                <td>3000 GiB</td>
-                <td>60 GiB</td>
-                <td>$0.02679</td>
-                <td>$18.00</td>
-                <td><button class="btn btn-outline-primary">→</button></td>
-              </tr>
+            <tbody id="plansTableBody">
+              <!-- generowane w script.js -->
             </tbody>
           </table>
         </div>
 
-      </div>
-    </div>
-  </div>
+        <!-- KOSZYK -->
+        <div id="cartSection" class="bg-light p-3 rounded" style="display: none;">
+          <h4>Koszyk</h4>
+          <div class="table-responsive">
+            <table class="table table-sm table-striped align-middle" id="cartTable">
+              <thead>
+                <tr>
+                  <th>Kategoria</th>
+                  <th>Szczegóły</th>
+                  <th>Cena (PLN)</th>
+                  <th>Usuń</th>
+                </tr>
+              </thead>
+              <tbody>
+                <!-- wiersze koszyka generowane w script.js -->
+              </tbody>
+            </table>
+          </div>
+          <div class="text-end mt-2">
+            <strong>Razem: <span id="cartTotal">0.00</span> PLN</strong>
+          </div>
+        </div>
+
+      </div><!-- col -->
+    </div><!-- row -->
+  </div><!-- container -->
 
   <!-- Stopka -->
   <footer class="text-center text-muted py-4 mt-5">
     <small>&copy; 2025 CloudPoint, All rights reserved.</small>
   </footer>
 
-  <!-- Bootstrap 5 JS -->
+  <!-- Bootstrap JS -->
   <script 
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
   </script>
