--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       
       <!-- LEWA KOLUMNA: Menu kategorii -->
       <div class="col-12 col-md-3 col-lg-2 px-4" id="leftMenu">
-        <h6 class="text-uppercase text-muted">Kategorie</h6>
+        <h6 class="text-uppercase text-muted">KATEGORIE</h6>
         <!-- Tu dynamicznie wstawimy listę kategorii (IaaS, PaaS, itd.) -->
         <ul class="list-unstyled" id="categoriesMenu">
           <!-- generowane w script.js -->
