--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CloudPoint - Kalkulator (styl DO)</title>
+  <title>CloudPoint - Kalkulator (styl DO, suwak IaaS)</title>
   <!-- Bootstrap 5 CSS (CDN) -->
   <link
     rel="stylesheet"
@@ -71,9 +71,9 @@
           <table class="table align-middle table-hover packages-table">
             <thead>
               <tr class="text-muted">
-                <th>Parametry</th>
-                <th>Cena (miesięcznie)</th>
-                <th></th>
+                <th style="width:60%">Parametry</th>
+                <th style="width:20%">Cena (miesięcznie)</th>
+                <th style="width:20%"></th>
               </tr>
             </thead>
             <tbody id="plansTableBody">
