--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CloudPoint - Kalkulator (styl DO, suwak IaaS)</title>
+  <title>CloudPoint - IaaS + Licencje MS</title>
   <!-- Bootstrap 5 CSS (CDN) -->
   <link
     rel="stylesheet"
@@ -15,7 +15,7 @@
   <!-- Górny pasek a'la DigitalOcean -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
     <div class="container-fluid">
-      <!-- Logo po lewej -->
+      <!-- Logo -->
       <a class="navbar-brand d-flex align-items-center" href="#">
         <span class="fw-bold text-primary">CloudPoint</span>
       </a>
@@ -52,7 +52,7 @@
       <!-- LEWA KOLUMNA: Menu kategorii -->
       <div class="col-12 col-md-3 col-lg-2 px-4" id="leftMenu">
         <h6 class="text-uppercase text-muted">KATEGORIE</h6>
-        <!-- Tu dynamicznie wstawimy listę kategorii (IaaS, PaaS, itd.) -->
+        <!-- Tu dynamicznie wstawiamy listę kategorii (IaaS, PaaS, SaaS itp.) -->
         <ul class="list-unstyled" id="categoriesMenu">
           <!-- generowane w script.js -->
         </ul>
@@ -114,10 +114,11 @@
     <small>&copy; 2025 CloudPoint, All rights reserved.</small>
   </footer>
 
-  <!-- Bootstrap JS -->
+  <!-- Bootstrap 5 JS (do tooltipów itp.) -->
   <script 
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
   </script>
   <script src="script.js"></script>
 </body>
 </html>
+
