--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CloudPoint - IaaS + Licencje MS</title>
+  <title>CloudPoint - IaaS, PaaS, Acronis, CSP</title>
   <!-- Bootstrap 5 CSS (CDN) -->
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+  />
+  <!-- Bootstrap Icons (CDN) -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
   />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -52,7 +57,6 @@
       <!-- LEWA KOLUMNA: Menu kategorii -->
       <div class="col-12 col-md-3 col-lg-2 px-4" id="leftMenu">
         <h6 class="text-uppercase text-muted">KATEGORIE</h6>
-        <!-- Tu dynamicznie wstawiamy listę kategorii (IaaS, PaaS, SaaS itp.) -->
         <ul class="list-unstyled" id="categoriesMenu">
           <!-- generowane w script.js -->
         </ul>
@@ -104,7 +108,6 @@
             <strong>Razem: <span id="cartTotal">0.00</span> PLN</strong>
           </div>
         </div>
-
       </div><!-- col -->
     </div><!-- row -->
   </div><!-- container -->
@@ -121,4 +124,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
