--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
           <table class="table align-middle table-hover packages-table">
             <thead>
               <tr class="text-muted">
-                <th style="width:60%">Parametry</th>
-                <th style="width:20%">Cena (miesięcznie)</th>
+                <th style="width:60%">PARAMETRY</th>
+                <th style="width:20%">CENA (MIESIĘCZNIE)</th>
                 <th style="width:20%"></th>
               </tr>
             </thead>
@@ -117,7 +117,7 @@
     <small>&copy; 2025 CloudPoint, All rights reserved.</small>
   </footer>
 
-  <!-- Bootstrap 5 JS (do tooltipów itp.) -->
+  <!-- Bootstrap 5 JS (do tooltipów) -->
   <script 
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
   </script>
