--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CloudPoint - IaaS, PaaS, Acronis, CSP</title>
+  <title>CloudPoint - SaaS (Aplikacje, Licencje)</title>
   <!-- Bootstrap 5 CSS (CDN) -->
   <link
     rel="stylesheet"
@@ -20,58 +20,41 @@
   <!-- Górny pasek a'la DigitalOcean -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
     <div class="container-fluid">
-      <!-- Logo -->
       <a class="navbar-brand d-flex align-items-center" href="#">
         <span class="fw-bold text-primary">CloudPoint</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topNavbar" aria-controls="topNavbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <!-- Prawa część navbara -->
       <div class="collapse navbar-collapse" id="topNavbar">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item me-3">
-            <a class="nav-link" href="#">Products</a>
-          </li>
-          <li class="nav-item me-3">
-            <a class="nav-link" href="#">Solutions</a>
-          </li>
-          <li class="nav-item me-3">
-            <a class="nav-link" href="#">Docs</a>
-          </li>
-          <li class="nav-item me-3">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <button class="btn btn-outline-primary">Sign up</button>
-          </li>
+          <li class="nav-item me-3"><a class="nav-link" href="#">Products</a></li>
+          <li class="nav-item me-3"><a class="nav-link" href="#">Solutions</a></li>
+          <li class="nav-item me-3"><a class="nav-link" href="#">Docs</a></li>
+          <li class="nav-item me-3"><a class="nav-link" href="#">Pricing</a></li>
+          <li class="nav-item"><button class="btn btn-outline-primary">Sign up</button></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Główna zawartość (2 kolumny) -->
   <div class="container-fluid mt-4">
     <div class="row">
-      
-      <!-- LEWA KOLUMNA: Menu kategorii -->
+      <!-- LEWA KOLUMNA: Menu -->
       <div class="col-12 col-md-3 col-lg-2 px-4" id="leftMenu">
         <h6 class="text-uppercase text-muted">KATEGORIE</h6>
         <ul class="list-unstyled" id="categoriesMenu">
           <!-- generowane w script.js -->
         </ul>
       </div>
-
-      <!-- PRAWA KOLUMNA: Tabela planów + koszyk -->
+      <!-- PRAWA KOLUMNA: Tabela + Koszyk -->
       <div class="col-12 col-md-9 col-lg-10 px-4" id="rightContent">
-        <!-- Nagłówek kategorii -->
         <h2 class="mt-3" id="categoryTitle">Wybierz kategorię...</h2>
         <p class="text-muted" id="categoryDesc">
           Proszę wybrać jedną z kategorii po lewej, aby zobaczyć dostępne plany/usługi.
         </p>
 
-        <!-- Tabela planów (a'la DO) -->
-        <div class="table-responsive mb-4" id="plansTableWrapper" style="display: none;">
+        <div class="table-responsive mb-4" id="plansTableWrapper" style="display:none;">
           <table class="table align-middle table-hover packages-table">
             <thead>
               <tr class="text-muted">
@@ -86,7 +69,6 @@
           </table>
         </div>
 
-        <!-- KOSZYK -->
         <div id="cartSection" class="bg-light p-3 rounded" style="display: none;">
           <h4>Koszyk</h4>
           <div class="table-responsive">
@@ -99,28 +81,23 @@
                   <th>Usuń</th>
                 </tr>
               </thead>
-              <tbody>
-                <!-- wiersze koszyka generowane w script.js -->
-              </tbody>
+              <tbody></tbody>
             </table>
           </div>
           <div class="text-end mt-2">
             <strong>Razem: <span id="cartTotal">0.00</span> PLN</strong>
           </div>
         </div>
-      </div><!-- col -->
-    </div><!-- row -->
-  </div><!-- container -->
+      </div>
+    </div>
+  </div>
 
-  <!-- Stopka -->
   <footer class="text-center text-muted py-4 mt-5">
     <small>&copy; 2025 CloudPoint, All rights reserved.</small>
   </footer>
 
-  <!-- Bootstrap 5 JS (do tooltipów) -->
-  <script 
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
-  </script>
+  <!-- Bootstrap 5 JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
