--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
   <!-- Główna zawartość -->
   <div class="container-fluid mt-4">
     <div class="row">
-      <!-- LEWA KOLUMNA: Menu -->
+      <!-- LEWE MENU -->
       <div class="col-12 col-md-3 col-lg-2 px-4" id="leftMenu">
         <h6 class="text-uppercase text-muted">KATEGORIE</h6>
-        <ul class="list-unstyled" id="categoriesMenu">
-          <!-- generowane w script.js -->
-        </ul>
+        <ul class="list-unstyled" id="categoriesMenu"></ul>
       </div>
 
       <!-- PRAWA KOLUMNA: Tabela planów + koszyk -->
       <div class="col-12 col-md-9 col-lg-10 px-4" id="rightContent">
         <h2 class="mt-3" id="categoryTitle">Wybierz kategorię...</h2>
-        <p class="text-muted" id="categoryDesc">Proszę wybrać jedną z kategorii po lewej, aby zobaczyć dostępne plany/usługi.</p>
+        <p class="text-muted" id="categoryDesc">
+          Proszę wybrać jedną z kategorii po lewej, aby zobaczyć dostępne plany/usługi.
+        </p>
 
         <div class="table-responsive mb-4" id="plansTableWrapper" style="display:none;">
           <table class="table align-middle table-hover packages-table">
@@ -72,8 +72,8 @@
           </table>
         </div>
 
-        <!-- Koszyk -->
-        <div id="cartSection" class="bg-light p-3 rounded" style="display:none;">
+        <!-- KOSZYK -->
+        <div id="cartSection" class="bg-light p-3 rounded" style="display: none;">
           <h4>Koszyk</h4>
           <div class="table-responsive">
             <table class="table table-sm table-striped align-middle" id="cartTable">
@@ -85,9 +85,7 @@
                   <th>Usuń</th>
                 </tr>
               </thead>
-              <tbody>
-                <!-- generowane w script.js -->
-              </tbody>
+              <tbody></tbody>
             </table>
           </div>
           <div class="text-end mt-2">
@@ -98,12 +96,11 @@
     </div><!-- row -->
   </div><!-- container -->
 
-  <!-- Stopka -->
   <footer class="text-center text-muted py-4 mt-5">
     <small>&copy; 2025 CloudPoint, All rights reserved.</small>
   </footer>
 
-  <!-- Bootstrap 5 JS -->
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
