--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CloudPoint - IaaS, PaaS, SaaS, Acronis, CSP, Bezpieczeństwo</title>
+  <title>CloudPoint - IaaS, PaaS, SaaS, Acronis, Microsoft CSP, Bezpieczeństwo</title>
   <!-- Bootstrap 5 CSS (CDN) -->
   <link
     rel="stylesheet"
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- NAV -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
     <div class="container-fluid">
       <a class="navbar-brand d-flex align-items-center" href="#">
@@ -38,14 +39,15 @@
     </div>
   </nav>
 
+  <!-- MAIN -->
   <div class="container-fluid mt-4">
     <div class="row">
-      <!-- LEWE MENU -->
+      <!-- Menu po lewej -->
       <div class="col-12 col-md-3 col-lg-2 px-4" id="leftMenu">
         <h6 class="text-uppercase text-muted">KATEGORIE</h6>
         <ul class="list-unstyled" id="categoriesMenu"></ul>
       </div>
-      <!-- PRAWA KOLUMNA -->
+      <!-- Prawa kolumna -->
       <div class="col-12 col-md-9 col-lg-10 px-4" id="rightContent">
         <h2 class="mt-3" id="categoryTitle">Wybierz kategorię...</h2>
         <p class="text-muted" id="categoryDesc">
@@ -61,13 +63,12 @@
                 <th style="width:20%"></th>
               </tr>
             </thead>
-            <tbody id="plansTableBody">
-            </tbody>
+            <tbody id="plansTableBody"></tbody>
           </table>
         </div>
 
-        <!-- KOSZYK -->
-        <div id="cartSection" class="bg-light p-3 rounded" style="display: none;">
+        <!-- Koszyk -->
+        <div id="cartSection" class="bg-light p-3 rounded" style="display:none;">
           <h4>Koszyk</h4>
           <div class="table-responsive">
             <table class="table table-sm table-striped align-middle" id="cartTable">
