--- a/index.html
+++ b/index.html
@@ -88,9 +88,57 @@
     </div>
   </div>
 
-  <footer class="text-center text-muted py-4 mt-5">
-    <small>&copy; 2025 CloudPoint, All rights reserved.</small>
+  <footer class="footer-kontakt mt-5">
+    <div class="container py-4">
+      <!-- Nagłówek duży: "Kontakt" -->
+      <h1 class="display-4 mb-4">Kontakt</h1>
+  
+      <div class="row">
+        <!-- LEWA KOLUMNA -->
+        <div class="col-sm-6 mb-4">
+          <!-- Dane pierwszej spółki -->
+          <p class="mb-4">
+            <strong>ENTEO Sp. z o.o.</strong><br>
+            Toruńska 155/328<br>
+            85-950 Bydgoszcz<br>
+            NIP: 9532636105<br>
+            KRS: 0000421983
+          </p>
+  
+          <!-- Dane drugiej spółki -->
+          <p class="mb-4">
+            <strong>ENTEO TECH Sp. z o.o.</strong><br>
+            Toruńska 155/312<br>
+            85-950 Bydgoszcz<br>
+            NIP: 9532748034<br>
+            KRS: 0000729123
+          </p>
+        </div>
+  
+        <!-- PRAWA KOLUMNA -->
+        <div class="col-sm-6 mb-4">
+          <p class="mb-4">
+            <strong>OPROGRAMOWANIE</strong><br>
+            T: 52 522 22 34<br>
+            M: dh@enteo.pl
+          </p>
+  
+          <p class="mb-4">
+            <strong>TECHNOLOGIE</strong><br>
+            T: 52 511 09 21<br>
+            M: tech@enteo.pl
+          </p>
+  
+          <p class="mb-0">
+            <strong>CLOUDPOINT</strong><br>
+            T: 52 511 09 21<br>
+            M: dh.tech@cloudpoint.pl
+          </p>
+        </div>
+      </div>
+    </div>
   </footer>
+  
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
