--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CloudPoint - Cennik</title>
-
   <!-- Bootstrap 5 CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
-  <!-- Google Fonts - Montserrat (możesz zamienić na Wix Medefor Text, jeśli masz link) -->
+  <!-- Google Fonts - Montserrat (lub inna) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-  
   <!-- Własny CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -43,7 +41,7 @@
       <div class="col-12 col-md-3 col-lg-2 px-4" id="leftMenu">
         <h6 class="text-uppercase text-muted">USŁUGI</h6>
         <ul class="list-unstyled" id="categoriesMenu">
-          <!-- Menu generowane dynamicznie przez script.js -->
+          <!-- Menu generowane dynamicznie -->
         </ul>
       </div>
       <!-- PRAWA KOLUMNA -->
@@ -51,7 +49,7 @@
         <h2 class="mt-3" id="categoryTitle">Wybierz kategorię...</h2>
         <p class="text-muted" id="categoryDesc">Proszę wybrać kategorię po lewej, aby zobaczyć dostępne usługi.</p>
         <div id="plansContainer">
-          <!-- Sekcje (boxy) generowane dynamicznie -->
+          <!-- Sekcje generowane dynamicznie -->
         </div>
         <!-- KOSZYK -->
         <div id="cartSection" class="bg-light p-3 rounded mt-4" style="display:none;">
@@ -66,9 +64,7 @@
                   <th>Usuń</th>
                 </tr>
               </thead>
-              <tbody>
-                <!-- Elementy koszyka generowane dynamicznie -->
-              </tbody>
+              <tbody><!-- Elementy koszyka generowane dynamicznie --></tbody>
             </table>
           </div>
           <div class="text-end mt-2">
@@ -79,18 +75,12 @@
     </div>
   </div>
 
+  <!-- FOOTER -->
   <footer class="footer-kontakt mt-5">
     <div class="container py-4">
       <h1 class="display-4 mb-4">Kontakt</h1>
       <div class="row">
         <div class="col-sm-6 mb-4">
-          <p class="mb-4">
-            <strong>ENTEO Sp. z o.o.</strong><br>
-            Toruńska 155/328<br>
-            85-950 Bydgoszcz<br>
-            NIP: 9532636105<br>
-            KRS: 0000421983
-          </p>
           <p class="mb-4">
             <strong>ENTEO TECH Sp. z o.o.</strong><br>
             Toruńska 155/312<br>
@@ -101,19 +91,14 @@
         </div>
         <div class="col-sm-6 mb-4">
           <p class="mb-4">
-            <strong>OPROGRAMOWANIE</strong><br>
-            T: 52 522 22 34<br>
-            M: dh@enteo.pl
-          </p>
-          <p class="mb-4">
             <strong>TECHNOLOGIE</strong><br>
             T: 52 511 09 21<br>
-            M: tech@enteo.pl
+            M: dh.tech@enteo.pl
           </p>
           <p class="mb-0">
             <strong>CLOUDPOINT</strong><br>
             T: 52 511 09 21<br>
-            M: dh.tech@cloudpoint.pl
+            M: dh@cloudpoint.pl
           </p>
         </div>
       </div>
