--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                   <th>Usuń</th>
                 </tr>
               </thead>
-              <tbody><!-- Elementy koszyka generowane dynamicznie --></tbody>
+              <tbody>
+                <!-- Elementy koszyka generowane dynamicznie -->
+              </tbody>
             </table>
           </div>
           <div class="text-end mt-2">
