--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Własny CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-light border-bottom">
     <div class="container-fluid">
@@ -34,14 +34,14 @@
     </div>
   </nav>
 
-  <!-- GŁÓWNA ZAWARTOŚĆ -->
-  <div class="container-fluid mt-4">
+  <!-- GŁÓWNA ZAWARTOŚĆ / WARSTWA NA KONTENT -->
+  <div class="container-fluid flex-fill mt-4">
     <div class="row">
       <!-- LEWE MENU -->
       <div class="col-12 col-md-3 col-lg-2 px-4" id="leftMenu">
         <h6 class="text-uppercase text-muted">USŁUGI</h6>
         <ul class="list-unstyled" id="categoriesMenu">
-          <!-- Menu generowane dynamicznie -->
+          <!-- Menu generowane dynamicznie (script.js) -->
         </ul>
       </div>
       <!-- PRAWA KOLUMNA -->
@@ -49,7 +49,7 @@
         <h2 class="mt-3" id="categoryTitle">Wybierz kategorię...</h2>
         <p class="text-muted" id="categoryDesc">Proszę wybrać kategorię po lewej, aby zobaczyć dostępne usługi.</p>
         <div id="plansContainer">
-          <!-- Sekcje generowane dynamicznie -->
+          <!-- Sekcje generowane dynamicznie (script.js) -->
         </div>
         <!-- KOSZYK -->
         <div id="cartSection" class="bg-light p-3 rounded mt-4" style="display:none;">
@@ -77,8 +77,8 @@
     </div>
   </div>
 
-  <!-- FOOTER -->
-  <footer class="footer-kontakt mt-5">
+  <!-- FOOTER PRZYKLEJONY DO DOŁU -->
+  <footer class="footer-kontakt mt-auto">
     <div class="container py-4">
       <h1 class="display-4 mb-4">Kontakt</h1>
       <div class="row">
@@ -113,4 +113,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
