--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
     rel="stylesheet">
   
-
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body class="d-flex flex-column min-vh-100">
 
