--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
           <div class="text-end mt-2">
             <strong>Razem: <span id="cartTotal">0.00</span> PLN</strong>
           </div>
+          <div class="d-flex gap-2 justify-content-end mt-3">
+            <button class="btn btn-secondary" id="btnExportXls">Eksport XLS</button>
+          </div>
         </div>
 
       </div>
@@ -102,29 +105,8 @@
   <!-- STOPKA -->
   <footer class="footer-kontakt mt-auto">
     <div class="container py-4">
-      <h1 class="display-4 mb-4">Kontakt</h1>
+      <h1 class="display-4 mb-4">Enteo Tech Sp. z o.o.</h1>
       <div class="row">
-        <div class="col-sm-6 mb-4">
-          <p class="mb-4">
-            <strong>ENTEO TECH Sp. z o.o.</strong><br>
-            Toruńska 155/312<br>
-            85-950 Bydgoszcz<br>
-            NIP: 9532748034<br>
-            KRS: 0000729123
-          </p>
-        </div>
-        <div class="col-sm-6 mb-4">
-          <p class="mb-4">
-            <strong>TECHNOLOGIE</strong><br>
-            T: 52 511 09 21<br>
-            M: dh.tech@enteo.pl
-          </p>
-          <p class="mb-0">
-            <strong>CLOUDPOINT</strong><br>
-            T: 52 511 09 21<br>
-            M: dh@cloudpoint.pl
-          </p>
-        </div>
       </div>
     </div>
   </footer>
